--- a/upgrade/2024/2024-q1-18-0-24-306.md
+++ b/upgrade/2024/2024-q1-18-0-24-306.md
@@ -1,19 +1,27 @@
 ---
-title: 2024 Q1 (18.0.24.130)
-page_title: 2024 Q1 Release Overview
+title: 2024 Q1 (18.0.24.306)
+page_title: 2024 Q1 306 Release Overview
 description: "See the changes introduced with Telerik Reporting 2024 Q1 that should be considered before upgrading, and the 3rd party products & packages this version depends on."
-slug: telerikreporting/upgrade/2024/2024-q1
+slug: telerikreporting/upgrade/2024/2024-q1-18-0-24-306
 tags: q1,2024
 published: True
-position: 0
+position: 1
 previous_url: /upgrade/2024/
 ---
 
-# 2024 Q1 Changes and Dependencies
+# 2024 Q1 18.0.24.306 Changes and Dependencies
 
-This article explains the manual changes required when upgrading to Telerik Reporting 2024 Q1 (18.0.24.130).
+This article explains the manual changes required when upgrading to Telerik Reporting 2024 Q1 (18.0.24.306).
 
 ## Changes
+
+### Declarative Report Definition (trdp, trdx)
+
+The deserialization of declarative report definitions now enforces stricter security rules.
+
+### Reporting Configuration
+
+The Reporting Configuration now has a new item: TypeReferences. It is used to explicitly allow user types to be resolved in both design-time and runtime.
 
 ### WinUI Report Viewer
 
